--- a/src/app/style/components/header.css
+++ b/src/app/style/components/header.css
@@ -22,6 +22,7 @@
     align-items: center;
     margin: 0 10px;
     cursor: pointer;
+    text-decoration: none
 }
 
 .header-search {
@@ -52,7 +53,7 @@
     cursor: pointer;
 }
 
-.header-button-green {
+a.header-button-green {
     border-radius: 25px;
     border: 1px solid rgba(163, 218, 165, .5);
     outline: none;
