--- a/src/app/style/components/input.css
+++ b/src/app/style/components/input.css
@@ -3,6 +3,35 @@
     border-radius: 4px;
     padding: 0 20px;
     width: 100%;
+    border: 1px solid #ddd;
+        outline: none;
+    }
+    
+    .input:focus {
     border: 1px solid #1785E5;
+}
+
+
+.autocomplete {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+}
+
+.tag {
+    padding: 5px;
+    border-radius: 4px;
+    background-color: #ECEFF0;
+    display: inline-block;
+    margin-left: auto;
+}
+
+.textarea {
+    height: 90px;
+    border-radius: 4px;
+    padding: 10px 20px;
+    width: 100%;
+    border: 1px solid #ddd;
     outline: none;
+    resize: none;
 }
