--- a/src/app/style/components/typography.css
+++ b/src/app/style/components/typography.css
@@ -1,3 +1,18 @@
 h1 {
     font-size: 24px;
 }
+h1 {
+    font-size: 20px;
+}
+
+h3,
+.h3 {
+    font-size: 16px;
+    font-weight: 700
+}
+
+h4,
+.h4 {
+    font-size: 12px;
+    font-weight: 700
+}
