--- a/src/app/style/components/dropdown.css
+++ b/src/app/style/components/dropdown.css
@@ -4,7 +4,9 @@
     right: 0;
     border: 1px solid #ddd;
     border-radius: 4px;
-    width: 70%
+    width: 70%;
+        background-color: #fff;
+        z-index: 2;
 }
 
 .dropdown a {
@@ -20,4 +22,21 @@
 
 .dropdown a:hover {
     background-color: #e4e4e4;
+}
+.dropdown-tags {
+    padding: 10px;
+    gap: 5px;
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.dropdown-tags a {
+    display: inline-block;
+    padding: 5px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+}
+
+.dropdown-tags h4 {
+    width: 100%
 }
