--- a/src/app/style/components/input.css
+++ b/src/app/style/components/input.css
@@ -26,6 +26,11 @@
     margin-left: auto;
 }
 
+.tags {
+    display: flex;
+    gap: 5px;
+    flex-wrap: wrap;
+}
 .textarea {
     height: 90px;
     border-radius: 4px;
